[gd_scene load_steps=9 format=3 uid="uid://dekniu7v110w4"]

[ext_resource type="Texture2D" uid="uid://cji2hjb30pjt0" path="res://example/skill_icons1.png" id="1_1k2ns"]
[ext_resource type="Script" path="res://Scripts/Player/SkillNode.gd" id="2_jhy1s"]
[ext_resource type="Resource" uid="uid://52vdo08klv6d" path="res://Skills/damage_upgrade.tres" id="2_qyqpv"]
[ext_resource type="Texture2D" uid="uid://dfwrk73ka6j8x" path="res://example/skilltree_borders.png" id="4_tfc2i"]
[ext_resource type="PackedScene" uid="uid://c63juqbjnho33" path="res://Scenes/Player Upgrade System/Skill_branch.tscn" id="5_ed0gt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_eg3r7"]
atlas = ExtResource("1_1k2ns")
region = Rect2(216, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mm5qw"]
atlas = ExtResource("4_tfc2i")
region = Rect2(0, 8, 128, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5kwd"]
atlas = ExtResource("4_tfc2i")
region = Rect2(0, 0, 128, 8)

[node name="SkillNode" type="TextureButton" groups=["PersistentNodes"]]
light_mask = 64
visibility_layer = 64
custom_minimum_size = Vector2(16, 16)
offset_right = 16.0
offset_bottom = 16.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_eg3r7")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2_jhy1s")
disabled_color = Color(0.415686, 0.415686, 0.415686, 1)
active_color = Color(1, 1, 1, 1)
line_active_texture = SubResource("AtlasTexture_mm5qw")
line_disable_texture = SubResource("AtlasTexture_n5kwd")
upgrade_data = ExtResource("2_qyqpv")

[node name="SkillBranch" parent="." instance=ExtResource("5_ed0gt")]
unique_name_in_owner = true
top_level = true
width = 35.0
texture = null

[connection signal="pressed" from="." to="." method="_on_pressed"]
